# Device-Assistant

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.900bbe0  CMakeLists.txt.user.iDHBQv  Device_Assistant.qmlproject  Device_Assistant.qmlproject.qtds  Device_Assistant.qmlproject.qtds.1ff76e0  Device_Assistant.qmlproject.qtds.621f297  GPTWrapper.py  README.md  __init__.py  build.lua  build_time.lua  database.cpp  database.h  databasemanager.cpp  databasemanager.h  gpt.cpp  gpt.h  gpt4prompt.txt  gpu_db_model.cpp  gpu_db_model.h  gpuinfo.cpp  gpuinfo.h  images.qrc  latest_build_time.txt  mainwindow.cpp  qmlmodules  systeminfo.cpp  systeminfo.h
content/: App.qml  App.qml.DYfMVs  App.qml.QiqnIU  CMakeLists.txt  GpuList.qml  Screen01.ui.qml  Screen01.ui.qml.autosave  Screen02.ui.qml  Screen02.ui.qml.nUloJt  Screen03.ui.qml  Screen04.ui.qml  Screen05.ui.qml  SystemInfoList.qml
imports/: CMakeLists.txt
imports/Device_Assistant/: CMakeLists.txt  qmldir
imports/Device_Assistant/designer/: plugin.metainfo
src/: database.cpp_off  database.h_off  import_qml_plugins.h  main.cpp  systeminfo.cpp  systeminfo.h
tools/Parser/: README.md  dnsshop_parser.py  gpu_parsed.txt  requirements.txt
